<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthentificationActivity"
    android:background="@drawable/bg_blue_homeboarding">

    <ImageView
        android:id="@+id/jkBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/jeankew"
        android:src="@drawable/bg_jeankevin_full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:id="@+id/bubbleLayout"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="37.5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:text="@string/kmon_bubble_title"
            android:textAlignment="gravity"

            android:textColor="@color/pink"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/connecte_toi"
            android:textAlignment="gravity"
            android:gravity="center_horizontal|top"
            android:textSize="14sp"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/bulle_bd"
        android:src="@drawable/bg_bubble_triangle"
        app:layout_constraintEnd_toEndOf="@+id/bubbleLayout"
        app:layout_constraintTop_toBottomOf="@+id/bubbleLayout" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login_round"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="38dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/edit_text_background"
            app:errorIconDrawable="@drawable/ico_cross_rose"
            app:startIconDrawable="@drawable/ico_profile_blue"
            app:hintEnabled="false"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:background="@android:color/transparent"
                android:textSize="@dimen/input_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="38dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/edit_text_background"
            app:errorIconDrawable="@drawable/ico_cross_rose"
            app:startIconDrawable="@drawable/ico_password_blue"
            app:hintEnabled="false"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:background="@android:color/transparent"
                android:textSize="@dimen/input_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="38dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_background_none"
            android:text="@string/se_connecter"
            android:textColor="#5D4037"
            android:textSize="14sp"
            app:backgroundTint="@null" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>